--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,17 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin">20dp</dimen>
+    <dimen name="activity_vertical_margin">6dp</dimen>
+    
+    <dimen name="pager_tab_margin">5dp</dimen>
+    <dimen name="list_item_padding">10dp</dimen>
+
+    <dimen name="text_name_margin">5dp</dimen>
+    <dimen name="text_small_size">12dp</dimen>
+    <dimen name="text_common_size">14dp</dimen>
+    <dimen name="text_large_size">16dp</dimen>
+
+    <dimen name="thumb_size">50dp</dimen>
+    <dimen name="thumb_margin">10dp</dimen>
 </resources>
+
