--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,37 +10,31 @@
         android:id="@+id/thumb"
         android:scaleType="fitXY"
         android:layout_marginRight="@dimen/thumb_margin"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_centerVertical="true" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/thumb">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textSize="@dimen/text_small_size"
-            android:text="New Text"
-            android:id="@+id/name_text" />
+            android:id="@+id/name_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textSize="@dimen/text_large_size"
-            android:text="New Text"
             android:textColor="@color/black"
-            android:id="@+id/title_text" />
-
+            android:id="@+id/title_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textSize="@dimen/text_small_size"
-            android:text="New Text"
-            android:id="@+id/tags_text" />
+            android:id="@+id/tags_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
