--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="white">#fff</color>
     <color name="black">#000</color>
     <color name="pager_underline_color">#2196f3</color>
+    <color name="theme_color">#3a77ed</color>
     <color name="pager_color">#c2c2c2</color>
 </resources>
