--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,9 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">20dp</dimen>
-    <dimen name="activity_vertical_margin">6dp</dimen>
+    <dimen name="activity_vertical_margin">10dp</dimen>
+
+    <dimen name="material_text_margin">20dp</dimen>
     
     <dimen name="pager_tab_margin">5dp</dimen>
     <dimen name="list_item_padding">10dp</dimen>
@@ -10,8 +12,12 @@
     <dimen name="text_small_size">12dp</dimen>
     <dimen name="text_common_size">14dp</dimen>
     <dimen name="text_large_size">16dp</dimen>
+    <dimen name="text_x_large_size">18dp</dimen>
+    <dimen name="text_article_title_size">30dp</dimen>
 
+    <dimen name="thumb_small_size">30dp</dimen>
     <dimen name="thumb_size">50dp</dimen>
+    <dimen name="thumb_large_size">70dp</dimen>
     <dimen name="thumb_margin">10dp</dimen>
 </resources>
 
