--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -76,6 +76,22 @@
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="@color/divider_color" />
+
+            <ListView
+                android:id="@+id/comment_list"
+                android:layout_marginRight="@dimen/material_text_margin"
+                android:layout_marginLeft="@dimen/material_text_margin"
+                android:footerDividersEnabled="true"
+                android:headerDividersEnabled="true"
+                android:divider="@color/divider_color"
+                android:layout_width="match_parent"
+                android:layout_height="300dp" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
