--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="pager_underline_color">#2196f3</color>
     <color name="theme_color">#3a77ed</color>
     <color name="pager_color">#c2c2c2</color>
+    <color name="divider_color">#787878</color>
 </resources>
