--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -35,12 +35,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                    <ImageView
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        xmlns:android="http://schemas.android.com/apk/res/android"
+                        xmlns:fresco="http://schemas.android.com/apk/res-auto"
+                        android:id="@+id/detail_thumb"
                         android:layout_width="@dimen/thumb_small_size"
                         android:layout_height="@dimen/thumb_small_size"
                         android:scaleType="fitCenter"
                         android:layout_marginRight="@dimen/thumb_margin"
-                        android:id="@+id/detail_thumb"/>
+                        fresco:roundAsCircle="true" />
 
                     <LinearLayout
                         android:orientation="vertical"
