--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,38 +14,42 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="@dimen/thumb_size"
-        android:layout_height="@dimen/thumb_size"
-        android:id="@+id/thumb"
-        android:scaleType="fitXY"
-        android:layout_marginRight="@dimen/thumb_margin"
-        android:layout_centerVertical="true" />
+        <com.facebook.drawee.view.SimpleDraweeView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:fresco="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/thumb"
+            android:layout_width="@dimen/thumb_size"
+            android:layout_height="@dimen/thumb_size"
+            android:scaleType="fitXY"
+            android:layout_marginRight="@dimen/thumb_margin"
+            android:layout_centerVertical="true"
+            fresco:roundAsCircle="true"
+            />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:textSize="@dimen/text_small_size"
-            android:id="@+id/name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:textSize="@dimen/text_small_size"
+                android:id="@+id/name_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:textSize="@dimen/text_large_size"
-            android:textColor="@color/black"
-            android:id="@+id/title_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:textSize="@dimen/text_large_size"
+                android:textColor="@color/black"
+                android:id="@+id/title_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-        <TextView
-            android:textSize="@dimen/text_small_size"
-            android:id="@+id/tags_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:textSize="@dimen/text_small_size"
+                android:id="@+id/tags_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-    </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
