--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#fff</color>
     <color name="black">#000</color>
-    <color name="pager_underline_color">#2196f3</color>
-    <color name="theme_color">#3a77ed</color>
+    <color name="theme_color">#2196f3</color>
     <color name="pager_color">#c2c2c2</color>
     <color name="divider_color">#787878</color>
 </resources>
