--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="jp.ac.dendai.im.cps.footopic.ArticleFragment">
+    tools:context="jp.ac.dendai.im.cps.footopic.fragments.ArticleFragment">
 
     <ScrollView
         android:layout_width="match_parent"
