--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content" android:layout_width="wrap_content" >
 
     <TextView
+        android:id="@+id/touch_item"
         android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
