--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,19 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_container"
     android:paddingTop="@dimen/list_item_padding" android:paddingBottom="@dimen/list_item_padding"
-    android:layout_height="wrap_content" android:layout_width="wrap_content" >
-
-    <TextView
-        android:id="@+id/touch_item"
-        android:visibility="invisible"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    android:layout_height="wrap_content" android:layout_width="match_parent" >
 
     <LinearLayout
         android:orientation="horizontal"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.facebook.drawee.view.SimpleDraweeView
@@ -30,6 +24,8 @@
             />
 
         <LinearLayout
+            android:id="@+id/list_item_text_container"
+            android:layout_weight="1"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -37,20 +33,20 @@
             <TextView
                 android:textSize="@dimen/text_small_size"
                 android:id="@+id/name_text"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:textSize="@dimen/text_large_size"
                 android:textColor="@color/black"
                 android:id="@+id/title_text"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:textSize="@dimen/text_small_size"
                 android:id="@+id/tags_text"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
