--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,5 +23,8 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!--activity_horizontal_margin + thumb_size = 66-->
+    <dimen name="list_touch_item_margin">66dp</dimen>
 </resources>
 
