--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="black">#000</color>
     <color name="theme_color">#2196f3</color>
     <color name="pager_color">#c2c2c2</color>
-    <color name="divider_color">#787878</color>
+    <color name="divider_color">#f1ecf2</color>
 </resources>
