--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,7 +18,8 @@
     <dimen name="thumb_small_size">30dp</dimen>
     <dimen name="thumb_size">50dp</dimen>
     <dimen name="thumb_large_size">70dp</dimen>
-    <dimen name="thumb_margin">10dp</dimen>
+    <dimen name="thumb_x_large_size">90dp</dimen>
+    <dimen name="thumb_margin">16dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
