--- a/app/src/main/res/layout/fragment_recycler.xml
+++ b/app/src/main/res/layout/fragment_recycler.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jp.ac.dendai.im.cps.footopic.fragments.RecyclerFragment">
+    tools:context="jp.ac.dendai.im.cps.footopic.fragments.RecyclerViewFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
