--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_main2" tools:context="jp.ac.dendai.im.cps.footopic.MainActivity">
+    tools:showIn="@layout/app_bar_main2" tools:context=".activities.MainActivity">
 
     <FrameLayout
         android:id="@+id/container"
