--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,5 +27,6 @@
 
     <!--activity_horizontal_margin + thumb_size = 66-->
     <dimen name="list_touch_item_margin">66dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
 
