記事詳細ページ表示機能を実装 #22

--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -15,35 +15,33 @@
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:fresco="http://schemas.android.com/apk/res-auto"
             android:id="@+id/comment_item_thumb"
-            android:layout_width="@dimen/thumb_small_size"
-            android:layout_height="@dimen/thumb_small_size"
-            />
+            android:layout_width="@dimen/thumb_size"
+            android:layout_height="@dimen/thumb_size"
+            android:scaleType="fitXY"
+            android:layout_marginRight="@dimen/thumb_margin"
+            android:layout_centerVertical="true"
+            fresco:roundAsCircle="true" />
 
-        <TextView
-            android:id="@+id/comment_user"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_common_size"
-            android:layout_marginLeft="@dimen/material_text_margin"
+        <LinearLayout
+            android:id="@+id/comment_item_text_container"
             android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/comment_time"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_small_size"
-            android:layout_gravity="right|bottom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/comment_user"
+                android:textSize="@dimen/text_small_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
+            <TextView
+                android:id="@+id/comment_text"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_common_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/comment"
-        android:textSize="@dimen/text_large_size"
-        android:layout_marginTop="@dimen/list_item_padding"
-        android:textColor="@color/black"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
 </LinearLayout>
